--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.host.url=https://sonarcloud.io
 sonar.organization=adshares-github
 sonar.projectKey=adshares-ads
 sonar.projectName=ADS Blockchain
-sonar.projectVersion=1.0.0-RC
+sonar.projectVersion=1.0.5
 
 # =====================================================
 #   Meta-data for the project
