--- a/src/default_esc.h.in
+++ b/src/default_esc.h.in
@@ -23,11 +23,11 @@
 #define BANK_MIN_MTIME   (BLOCKSEC*2) /* AND if no transaction in this period bank can be taken over */
 //#define BLOCKS_COMPRESSED_SHIFT 16 /* shift from current block to archive old blocks */
 #else
-#define BLOCKSEC 512 /* block period in seconds (17min) */
-#define BLOCKDIV 2048 /* number of blocks for dividend update (dividend period 12 days) */
+#define BLOCKSEC 32 /* block period in seconds (17min) */
+#define BLOCKDIV 8 /* number of blocks for dividend update (dividend period 12 days) */
 #define MAX_UNDO 4096 /* maximum history of block undo files in blocks (24 days) */
 #define MAX_MSGWAIT 0x10 /* wait no more than 16s for a message */
-#define VOTE_DELAY 4 /*increase later (maybe monitor network delay)!!!*/
+#define VOTE_DELAY 1 /*increase later (maybe monitor network delay)!!!*/
 #define VIP_MAX 31 /* maximum number of VIP servers */
 #define MIN_PEERS 8 /* keep at least 8 peers connected */
 #define MAX_PEERS 16 /* keep not more than 16 peers connected */
@@ -35,6 +35,7 @@
 #define CLIENT_POOL 16	/* do not offer more threads that are used for network message validation */
 #define USER_MIN_AGE     (BLOCKSEC*10000L) /* wait at least 10000 blocks before deleting an account */
 #define BANK_MIN_MTIME   (BLOCKSEC*1000L) /* AND if no transaction in this period bank can be taken over */
+#define BLOCKS_COMPRESSED_SHIFT 16 /* shift from current block to archive old blocks */
 #endif
 
 #define TOTALMASS 3875820600000000000L /* total balance (target) */
