--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ addons:
     sources:
       - sourceline: "ppa:ubuntu-toolchain-r/test"
     packages:
-      - realpath
-      - gcc-5 g++-5 build-essential make cmake
+      - manpages-fr-extra
+      - gcc-11 g++-11 build-essential make cmake
       - openssl libboost-all-dev libssl-dev
   hosts:
       - esc.dock
