--- a/.travis.yml
+++ b/.travis.yml
@@ -47,27 +47,30 @@ install:
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 90
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-11 90
   # QA TESTS
+  - sudo add-apt-repository ppa:adshares/releases -y
+  - sudo apt-get update -q
+  - sudo apt install ads -y
   - git clone --branch debug https://github.com/adshares/ads-tests.git $TEST_DIR
   # COMMON
   - export PATH="$BIN_DIR:$PATH"
 
 stages:
-  - compile
+#  - compile
   - test
   - name: quality
     if: branch = master
 
 jobs:
   include:
-    - stage: compile
-      script:
-        - mkdir build
-        - $TEST_DIR/scripts/ads_compile -d -o build src
-        - mkdir -p $BIN_DIR
-        - cp build/esc/ads $BIN_DIR
-        - cp build/escd/adsd $BIN_DIR
-        - export PATH="$BIN_DIR:$PATH"
-
+#    - stage: compile
+#      script:
+#        - mkdir build
+#        - $TEST_DIR/scripts/ads_compile -d -o build src
+#        - mkdir -p $BIN_DIR
+#        - cp build/esc/ads $BIN_DIR
+#        - cp build/escd/adsd $BIN_DIR
+#        - export PATH="$BIN_DIR:$PATH"
+#
     - stage: test
       script:
         - $ADS_CONF && $ADS_START && cd $TEST_DIR
