--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ install:
   - sudo add-apt-repository ppa:adshares/releases -y
   - sudo apt-get update -q
   - sudo apt install ads -y
+  - ads --version
   - git clone --branch debug https://github.com/adshares/ads-tests.git $TEST_DIR
   # COMMON
   - export PATH="$BIN_DIR:$PATH"
@@ -73,38 +74,40 @@ jobs:
 #
     - stage: test
       script:
-        - $ADS_CONF && $ADS_START && cd $TEST_DIR
+        - $ADS_CONF
+        - $ADS_START
+        - cd $TEST_DIR
         - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @transfer"
-    - stage: test
-      script:
-        - $ADS_CONF && $ADS_START && cd $TEST_DIR
-        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @status"
-    - stage: test
-      script:
-        - $ADS_CONF && $ADS_START && cd $TEST_DIR
-        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @broadcast"
-    - stage: test
-      script:
-        - $ADS_CONF && $ADS_START && cd $TEST_DIR
-        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @non_existent,@fee_sharing,@vip_key,@function,@dry_run"
-    - stage: test
-      script:
-        - $ADS_CONF && $ADS_START && cd $TEST_DIR
-        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @retrieve_funds"
-    - stage: test
-      script:
-        - $ADS_CONF && $ADS_START && cd $TEST_DIR
-        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @account"
-    - stage: test
-      script:
-        - $ADS_CONF && $ADS_START && cd $TEST_DIR
-        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @node"
-
-    - stage: quality
-      script:
-        # compile
-        - mkdir build
-        - build-wrapper-linux-x86-64 --out-dir bw_output $TEST_DIR/scripts/ads_compile -d -o build -c "-DCODE_COVERAGE=1" src
-        - export PATH="build/esc:build/escd:$PATH"
-        #Sonar Qube
-        - cd $TRAVIS_BUILD_DIR && sonar-scanner
+#    - stage: test
+#      script:
+#        - $ADS_CONF && $ADS_START && cd $TEST_DIR
+#        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @status"
+#    - stage: test
+#      script:
+#        - $ADS_CONF && $ADS_START && cd $TEST_DIR
+#        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @broadcast"
+#    - stage: test
+#      script:
+#        - $ADS_CONF && $ADS_START && cd $TEST_DIR
+#        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @non_existent,@fee_sharing,@vip_key,@function,@dry_run"
+#    - stage: test
+#      script:
+#        - $ADS_CONF && $ADS_START && cd $TEST_DIR
+#        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @retrieve_funds"
+#    - stage: test
+#      script:
+#        - $ADS_CONF && $ADS_START && cd $TEST_DIR
+#        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @account"
+#    - stage: test
+#      script:
+#        - $ADS_CONF && $ADS_START && cd $TEST_DIR
+#        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @node"
+#
+#    - stage: quality
+#      script:
+#        # compile
+#        - mkdir build
+#        - build-wrapper-linux-x86-64 --out-dir bw_output $TEST_DIR/scripts/ads_compile -d -o build -c "-DCODE_COVERAGE=1" src
+#        - export PATH="build/esc:build/escd:$PATH"
+#        #Sonar Qube
+#        - cd $TRAVIS_BUILD_DIR && sonar-scanner
