--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 # OS: Ubuntu Focal 20.04
+os: linux
 dist: focal
 
 # Project language
@@ -58,8 +59,8 @@ install:
 stages:
 #  - compile
   - test
-  - name: quality
-    if: branch = master
+#  - name: quality
+#    if: branch = master
 
 jobs:
   include:
