--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-# OS: Ubuntu (Jammy Jellyfish) 22.04
+# OS: Ubuntu Focal 20.04
 os: linux
-dist: jammy
+dist: focal
 
 # Project language
 language: cpp
