--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-# OS: Ubuntu Focal 20.04
+# OS: Ubuntu (Jammy Jellyfish) 22.04
 os: linux
-dist: focal
+dist: jammy
 
 # Project language
 language: cpp
