revert ads-tests branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ install:
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 90
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-11 90
   # QA TESTS
-  - git clone --branch debug https://github.com/adshares/ads-tests.git $TEST_DIR
+  - git clone https://github.com/adshares/ads-tests.git $TEST_DIR
   # COMMON
   - export PATH="$BIN_DIR:$PATH"
 
